# RaniEngineCmake

./: CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: cmake.yml  emscripten.yml
Engine/: CMakeLists.txt  Engine.cpp  Engine.h  Font.cpp  Font.h  GameObject.cpp  GameObject.h  InputManager.cpp  Minigin.cpp  Minigin.h  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  SceneManager.cpp  SceneManager.h  Singleton.h  TextObject.cpp  TextObject.h  Texture2D.cpp  Texture2D.h  Transform.cpp  Transform.h
Engine/inc/: Component.h  ComponentDescriptors.h  Engine.h  EngineDescriptor.h  EngineExport.h  EngineSettings.h  FPSRenderComponent.h  GameObject.h  GeneralStructs.h  ICommand.h  InputManager.h  InputSystem.h  Minigin.h  RECColor.h  RenderComponent.h  ResourceCreateInfos.h  ResourceDescriptors.h  ResourceManager.h  Scene.h  SceneManager.h  SpriteDescriptor.h  SpriteDescriptors.h  SpriteRenderComponent.h  TextRenderComponent.h  TransformComponent.cpp  TransformComponent.h
Engine/inc/Components/: AnimatedSpriteComponent.h  Component.h  ControllerComponent.h  DebugGridRenderComponent.h  FPSComponent.h  FPSRenderComponent.h  GridComponent.h  RenderComponent.h  RotatorComponent.h  SpriteRenderComponent.h  TextRenderComponent.h  TransformComponent.h  TrashTheCacheRenderComponent.h
Engine/inc/Input/: ButtonState.h  Input.h  InputAction.h  InputBinding.h  InputSystem.h
Engine/src/: AnimationInfo.h  Component.cpp  Engine.cpp  FPSRenderComponent.cpp  FileReader.cpp  FileReader.h  Font.cpp  Font.h  FrameInfo.h  GameObject.cpp  InputManager.cpp  InputSystem.cpp  Minigin.cpp  Renderer.cpp  Renderer.h  ResourceManager.cpp  ResourceManager.h  SDLHelpers.h  Scene.cpp  SceneManager.cpp  SpriteInfo.h  SpriteRenderComponent.cpp  TextRenderComponent.cpp  TextureFontInfo.h  TimeSystem.cpp  TimeSystem.h  TransformComponent.cpp  Window.cpp  Window.h
Engine/src/Components/: AnimatedSpriteComponent.cpp  Component.cpp  DebugGridRenderComponent.cpp  FPSComponent.cpp  FPSRenderComponent.cpp  GridComponent.cpp  RotatorComponent.cpp  SpriteRenderComponent.cpp  TextRenderComponent.cpp  TransformComponent.cpp  TrashTheCacheRenderComponent.cpp
Engine/src/FileHandling/: IParser.h  JSON_Parser.cpp  JSON_Parser.h
Engine/src/FileParsing/: CSV_Parser.cpp  CSV_Parser.h  IParser.h  JSON_Parser.cpp  JSON_Parser.h  ParserFactory.cpp  ParserFactory.h
Engine/src/Input/: ControllerState.h  InputBinding.cpp  InputSystem.cpp
Engine/src/Input/InputDevices/: Controller.cpp  Controller.h  Keyboard.cpp  Keyboard.h
Game/: CMakeLists.txt  Main.cpp  MoveCommand.cpp  MoveCommand.h
Game/Data/: TitleScreenFramesData.json  characterFramesData.json  characterSpritesData.csv
web/: index.html
